Made adjustments to the header (hero) section in CSS.

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,15 @@
+/*
+.html {
+    background-color: black;
+    padding: 50px;
+    height: 100%;
+}*/
 body {
     background-color: #e5e7eb;
     padding: 0;
     margin: 0;
     text-align: center;
-    font-family: 'Roboto', arial;
+    font-family: Roboto, arial;
 }
 
 .container {
@@ -11,17 +17,18 @@ body {
     flex-direction: column;
     color: #f9faf8;
     background-color: #1f2937;
+    margin-left: 50px;
 }
 
 .header-menu {
     display: flex;
     flex-direction: row;
-    padding: 20px 0px 20px 50px;
+    padding: 10px 0px 20px 50px;
     align-items: center;
 }
 
 .header-logo img {
-    width: 84px;
+    width: 90px;
     height: auto;
     margin-right: auto;
 }
@@ -37,7 +44,7 @@ ul {
     display: flex;
     margin: 0;
     padding: 0;
-    gap: 40px;
+    gap: 30px;
 }
 
 .header-links a {
@@ -50,6 +57,35 @@ ul {
     margin: 0px;
 }
 
+.about-me {
+    display: flex;
+    align-items: left;
+    justify-content: space-between;
+    
+}
+
+.about-me-text {
+    font-size: 48px;
+    font-weight: extra-bold;
+    box-sizing: border-box;
+    display: flex;
+    flex-wrap: wrap;
+    align-items: left;
+    padding-left: 20px;
+}
+
+.about-me-text p {
+    font-size: 18px;
+}
+
 .about-me-image {
-    transform: rotate(-90deg);
+    max-width: 100%;
+    height: auto;
+    margin-top: 50px;
+    padding: 30px 100px 50px 20px;
+    
+}
+
+button {
+    background-color: #3882F60;
 }
