--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,3 @@
-/*
-.html {
-    background-color: black;
-    padding: 50px;
-    height: 100%;
-}*/
 
 /* SETUP */
 * {
@@ -15,31 +9,24 @@ header, footer, main {
     font-size: 18px;
     color: #f9faf8;
 }
-/*
-section {
-    border: 4px solid lime;
-    
-}
-*/
+
 
 /* STRUCTURE */
 body {
     display: flex;
     flex-direction: column;
-   /* border: 10px solid blue;*/
-    min-height: 100vh;
+    
 }
 
 main {
     flex-grow: 1;
-    /*border: 10px solid pink;*/
+    
 }
 
 inner-column {
     display: block;
-    /*border: 4px solid orange;*/
     width: 90%;
-    max-width: 900px;
+    max-width: 1100px;
     margin-left: auto;
     margin-right: auto;
     
@@ -79,13 +66,46 @@ button {
     border-radius: 4px;
 }
 
+.information {
+    align-items: center;
+    min-height: 80vh;
+}
 
-body {
-    background-color: #e5e7eb;
+.info-header {
+    color: #1f2937;
+}
+
+.info-image {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.information img {
+    width: 200px;
+    height: 200px;
+    border: 4px solid #3882F6;
+    border-radius: 15px;
+}
+
+.girl-image {
+    width: 200px;
+    height: 200px;
+    object-fit: fill;
+    margin: 5px 20px 0px 20px;
+}
+
+.girl-image p {
+    margin-top: 20px;
+}
+
+.information {
+    background-color: #f9faf8;
     padding: 0;
     margin: 0;
     text-align: center;
     font-family: Roboto, arial;
+    color: #1f2937;
 }
 
 .header-menu {
@@ -120,6 +140,60 @@ ul {
     
 }
 
+.quotation {
+    display: flex;
+    flex-direction: column;
+    background-color: #E5E7EB;
+    padding: 0 200px;
+}
+
+.quote {
+    font-size: 36px;
+    color: #1F2937;
+    font-style: italic;
+    font-weight: lighter;
+    font-family: 'Roboto', arial;
+}
+
+.quoter {
+    padding-bottom: 20px;
+    padding-right: 10px;
+    font-family: 'Roboto', arial;
+    text-align: right;
+}
+
+.action {
+    background-color: #3882F6 ;
+    margin: 50px 200px;
+    padding: 10px 80px;
+    display: flex;
+    align-items: center;
+    border-radius: 5px;
+    border-color: none;
+}
+
+.action-header {
+    color: #fff;
+    font-family: 'Roboto', arial;
+    padding: 0;
+    margin: 30px 0px 0px 50px;
+}
+
+.action-subtext {
+    color: #fff;
+    opacity: 0.7;
+    margin: 5px 30px 30px 50px;
+}
+
+.action button {
+    color: #fff;
+    font-family: 'Roboto', arial;
+    border-color: #fff;
+    border-radius: 8px;
+    background-color: #3882F6;
+    padding: 5px 25px;
+    font-size: 15px;
+}
 
 .header-links a {
     font-size: 18px;
@@ -147,9 +221,8 @@ h1 {
 }
 
 .about-me-text {
-    
     display: block;
-    
+   
 }
 
 .about-me-text p {
@@ -157,7 +230,8 @@ h1 {
 }
 
 .about-me-image {
-
+border:4px solid #e5e7eb;
+border-radius: 4px;
 }
 
 @media (min-width: 700px) {
